styles/marquee-swiper.css
body{
  --swiper-pagination-color: currentColor;
  --swiper-pagination-bottom: auto;
  --swiper-pagination-bullet-size: 0.5em;
  --swiper-pagination-bullet-inactive-color: currentColor;
  --swiper-pagination-bullet-inactive-opacity: 0.15;
  --swiper-pagination-bullet-horizontal-gap: 0.25em;
  --swiper-wrapper-transition-timing-function: cubic-bezier(0.625, 0.05, 0, 1);
}

/* .swiper-slide{
  --gap: 2em;
  padding-right: var(--gap);
  padding-inline: var(--gap);
} */

/*
.swiper-slide:last-of-type{
  margin-right: calc(-1 * var(--gap));
} */

.swiper-slide.is-active {
  transition: transform 0.6s cubic-bezier(0.625, 0.05, 0, 1);
  transform: scale(1.2);
}

.swiper-navigation__button{
  transition: opacity 0.2s ease;
}

.swiper-button-disabled{
  opacity: 0;
  pointer-events: none;
}

.wf-design-mode .swiper {
	overflow-x: scroll !important;
  overflow-y: hidden;
}

